[package]
name = "noir_to_aleo_instructions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noirc_frontend = { path = "../noir_entropy/crates/noirc_frontend", features = ["bn254_std"] }
acvm = { path = "../noir_entropy/crates/acvm", features = ["bn254"] }
noirc_abi = { path = "../noir_entropy/crates/noirc_abi", features = ["bn254"] }
noirc_driver = { path = "../noir_entropy/crates/noirc_driver", features = ["bn254_std"] }
noir_field = { path = "../noir_entropy/crates/noir_field", features = ["bn254"] }
noirc_evaluator = { path = "../noir_entropy/crates/noirc_evaluator", features = ["bn254_std"] }
fm = { path = "../noir_entropy/crates/fm", features = ["std"] }

indexmap = "1"
dirs = "4"
termcolor = "1"
hex = "0.4"
url = "2"
serde_derive = "1"
serde = "1"
toml = "0.5"
